# EUD-Editor

./: .gitignore  README.md  debug_iscript.js  debug_iscript_table.js  electron-builder.yml  execution_flow.md  package-lock.json  package.json  test.mjs  test_dat.mjs  test_iscript.mjs  tmp_read.js  tmp_read2.js
.gemini/: instructions.md
src-rust/: Cargo.toml
src-rust/src/: dat.rs  grp.rs  iscript_json.rs  lib.rs  tbl.rs
src/main/: buildSystem.js  casc.js  cascPacker.js  chkParser.js  index.js  paths.js  projectManager.js  settings.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.jsx  main.jsx
src/renderer/src/assets/: base.css  editor.css  main.css
src/renderer/src/components/: BuildWindow.jsx  EditorLayout.jsx  MainContent.jsx  SetupScreen.jsx  Sidebar.jsx  StartScreen.jsx  TitleBar.jsx  Versions.jsx
src/renderer/src/constants/: datFlingy.js  datImage.js  datSprite.js  datTech.js  datUnit.js  datUnitOrder.js  datUpgrade.js  datWeapon.js  reqOpcodes.js  unitGroups.js
src/renderer/src/contexts/: NavigationContext.jsx  SettingsContext.jsx  ThemeContext.jsx
src/renderer/src/dat/: statusInfor.def
src/renderer/src/data/: grpUnit.txt  images.json  iscript_data.json  reqopcode.txt  units.json
src/renderer/src/hooks/: useDatOptions.js  useNavigationTarget.js
src/renderer/src/i18n/: en.js  i18nContext.jsx  ko.js
src/renderer/src/utils/: datParser.js  datStore.js  grpDecoder.js  iscriptParser.js  iscriptWasm.js  paletteLoader.js  previewGenerator.js  requireDataParser.js  tblParser.js
(+39 files in other folders)
