[package]
name = "rust-grp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
encoding_rs = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
